Add more tests to DocumentServiceImplTest

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,3 +22,9 @@ externaldispatches.addNew=Add External Dispatch
 companies.addNew=Add Company
 internaldispatches.addNew=Add Internal Dispatch
 showEntries=Show entries:
+decimalNumber=Decimal number
+name=Name
+developer=Developer
+status=Status
+originalHolder=Original holder
+showDocument=Show document
