--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -22,4 +22,11 @@ externaldispatches.addNew=Добавить внешнюю рассылку
 companies.addNew=Добавить предприятие
 internaldispatches.addNew=Добавить внутреннюю рассылку
 showEntries=Показать результатов:
+decimalNumber=Децимальный номер
+name=Наименование
+developer=Разработчик
+status=Статус
+originalHolder=Держатель подлинника
+showDocument=Показать документ
+
 
