Add some more i18n

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,7 +24,21 @@ internaldispatches.addNew=Add Internal Dispatch
 showEntries=Show entries:
 decimalNumber=Decimal number
 name=Name
+inventoryNumber=Inventory number
 developer=Developer
 status=Status
+stage=Stage
+form=Form
 originalHolder=Original holder
 showDocument=Show document
+researchDateAfter=R.Date (After):
+researchDateBefore=R.Date (Before):
+search=Search
+clearFilters=Clear filters
+notSelected=(not selected)
+status.ORIGINAL=Original
+status.DUPLICATE=Duplicate
+status.ACC_COPY=Acc. copy
+status.UNACC_COPY=Unacc. copy
+
+
