--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -24,9 +24,23 @@ internaldispatches.addNew=Добавить внутреннюю рассылку
 showEntries=Показать результатов:
 decimalNumber=Децимальный номер
 name=Наименование
+inventoryNumber=Инвентарный номер
 developer=Разработчик
 status=Статус
+stage=Этап
+form=Форма
 originalHolder=Держатель подлинника
 showDocument=Показать документ
+researchDateAfter=Дата в. (После):
+researchDateBefore=Дата в. (До):
+search=Поиск
+clearFilters=Сброс фильтров
+notSelected=(не выбрано)
+status.ORIGINAL=Подлинник
+status.DUPLICATE=Дубликат
+status.ACC_COPY=Учт. копия
+status.UNACC_COPY=Неучт. копия
+
+
 
 
