Add some more i18n

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,5 +40,13 @@ status.ORIGINAL=Original
 status.DUPLICATE=Duplicate
 status.ACC_COPY=Acc. copy
 status.UNACC_COPY=Unacc. copy
+form.ELECTRONIC=Electronic
+form.PAPER=Paper
+chief=Chief
+workersAmount=Workers amount
+changeNoticeNumber=Number
+changeCode=Change code
+issueDate=Issue date
+showNotice=Show notice
 
 
