--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -40,6 +40,20 @@ status.ORIGINAL=Подлинник
 status.DUPLICATE=Дубликат
 status.ACC_COPY=Учт. копия
 status.UNACC_COPY=Неучт. копия
+form.ELECTRONIC=ЭН
+form.PAPER=Бумага
+chief=Начальник
+workersAmount=Количество работников
+changeNoticeNumber=Номер
+changeCode=Код изменения
+issueDate=Дата выпуска
+showNotice=Показать извещение
+
+
+
+
+
+
 
 
 
