Add internationalization to all list pages of project

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -48,5 +48,25 @@ changeNoticeNumber=Number
 changeCode=Change code
 issueDate=Issue date
 showNotice=Show notice
+letterOutgoingNumber=Letter outgoing number
+dispatchDate=Dispatch date
+company=Company
+waybill=Waybill
+remark=Remark
+companyName=Company name
+contactPerson=Contact person
+address=Address
+stamp=Stamp
+addressee=Addressee
+dispatchType=Dispatch type
+album=Album
+scattered=Scattered
+albumDecimalNumber=Decimal number
+currentHandler=Current handler
+handlerName=Handler name
+handlerPhoneNumber=Handler phone number
+receivedDate=Received date
+action=Action
+changeHandler=Change handler
 
 
