--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -48,6 +48,32 @@ changeNoticeNumber=Номер
 changeCode=Код изменения
 issueDate=Дата выпуска
 showNotice=Показать извещение
+letterOutgoingNumber=Исходящий номер письма
+dispatchDate=Дата отправки
+company=Предприятие
+waybill=Накладная
+remark=Примечание
+companyName=Наименование предприятия
+contactPerson=Контактное лицо
+address=Адрес
+stamp=Штамп
+addressee=Адресат
+dispatchType=Тип рассылки
+album=Альбом
+scattered=Россыпь
+albumDecimalNumber=Децимальный номер
+currentHandler=Текущий держатель
+handlerName=ФИО держателя
+handlerPhoneNumber=Телефон держателя
+receivedDate=Дата получения
+action=Действие
+changeHandler=Сменить держателя
+
+
+
+
+
+
 
 
 
