Add full support of i18n (bilingual: EN/RU) to Documents part of project

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,7 +44,7 @@ form.ELECTRONIC=Electronic
 form.PAPER=Paper
 chief=Chief
 workersAmount=Workers amount
-changeNoticeNumber=Number
+changeNoticeNumber=Notice number
 changeCode=Change code
 issueDate=Issue date
 showNotice=Show notice
@@ -68,5 +68,59 @@ handlerPhoneNumber=Handler phone number
 receivedDate=Received date
 action=Action
 changeHandler=Change handler
+toListOfDocuments=To List of Documents
+documentDirectory=Document Directory
+information=information
+changeNotices=Changes
+applicability=Applicability
+externalDispatches=External dispatches
+internalDispatches=Internal dispatches
+create=Create
+update=Update
+delete=Delete
+showChanges=Show changes
+showApplicability=Show applicability
+showExternals=Show external dispatches
+showInternals=Show internal dispatches
+documentInfo=Document info
+format=Format
+sheetsAmount=Sheets amount
+a4Amount=A4 amount
+saveDocumentFormTitle=Save document
+updateDocumentFormTitle=Update document
+goBack=Go Back
+documentCard=Document Card
+pleaseCorrectValues=Please correct values in error below
+nothingSelected=Nothing selected
+documentChangeNotices=Document change notices
+backToDocumentInfo=Back to Document info
+changeNumber=Change number
+remove=Remove
+noChanges=No changes
+document.changenotices.section.changenotices=changes
+documentApplicabilityList=Document applicability list
+applicabilityDecimalNumber=Applicability decimal number
+addApplicability=Add applicability
+document.applicabilities.section.applicability=applicability
+noApplicability=No applicability
+externalDispatchesList=External dispatches list
+document.externaldispatches.section.externalDispatches=external dispatches
+noExternalDispatches=No external dispatches
+active=Active
+active.true=Yes
+active.false=No
+deregister=Deregister
+deregisterWithIncomings=Dereg. with inc.
+internalDispatchesList=Internal dispatches list
+document.internaldispatches.section.internalDispatches=internal dispatches
+noInternalDispatches=No internal dispatches
+dispatchHandler=Dispatch handler
+deregisterAlbum=Deregister album
+
+
+
+
+
+
 
 
