--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -44,7 +44,7 @@ form.ELECTRONIC=ЭН
 form.PAPER=Бумага
 chief=Начальник
 workersAmount=Количество работников
-changeNoticeNumber=Номер
+changeNoticeNumber=Номер извещения
 changeCode=Код изменения
 issueDate=Дата выпуска
 showNotice=Показать извещение
@@ -68,6 +68,66 @@ handlerPhoneNumber=Телефон держателя
 receivedDate=Дата получения
 action=Действие
 changeHandler=Сменить держателя
+toListOfDocuments=К списку документов
+documentDirectory=Раздел документов
+information=информация
+changeNotices=Изменения
+applicability=Применяемость
+externalDispatches=Внешние рассылки
+internalDispatches=Внутренние рассылки
+create=Создать
+update=Изменить
+delete=Удалить
+showChanges=Показать изменения
+showApplicability=Показать применяемость
+showExternals=Показать внешние рассылки
+showInternals=Показать внутренние рассылки
+documentInfo=Информация о документе
+format=Формат
+sheetsAmount=Количество листов
+a4Amount=Количество ф. А4
+saveDocumentFormTitle=Создать документ
+updateDocumentFormTitle=Изменить документ
+goBack=Назад
+documentCard=Карточка документа
+pleaseCorrectValues=Пожалуйста исправьте неверные значения ниже
+nothingSelected=Не выбрано
+documentChangeNotices=Изменения документа
+backToDocumentInfo=Назад к инфо о документе
+changeNumber=Номер изменения
+remove=Убрать
+noChanges=Изменений нет
+document.changenotices.section.changenotices=изменения
+documentApplicabilityList=Список применяемостей документа
+applicabilityDecimalNumber=Децимальный номер применяемости
+addApplicability=Добавить прим-ть
+document.applicabilities.section.applicability=применяемость
+noApplicability=Применяемости нет
+externalDispatchesList=Список внешних рассылок
+document.externaldispatches.section.externalDispatches=внешние рассылки
+noExternalDispatches=Внешних рвссылок нет
+active=Активна
+active.true=Да
+active.false=Нет
+deregister=Снять с учета
+deregisterWithIncomings=Снять с вх.
+internalDispatchesList=Список внутренних рассылок
+document.internaldispatches.section.internalDispatches=внутренние рассылки
+noInternalDispatches=Внутренних рассылок нет
+dispatchHandler=Абонент
+deregisterAlbum=Снять с учета альбом
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
