Add EntityGraph to DocumentRepository

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -117,6 +117,9 @@ noInternalDispatches=No internal dispatches
 dispatchHandler=Dispatch handler
 deregisterAlbum=Deregister album
 
+NotBlank.document.decimalNumber=Decimal number must not be blank
+DecimalNumberNotDuplicate.document.decimalNumber=Decimal number already exists
+
 
 
 
