--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -117,6 +117,10 @@ noInternalDispatches=Внутренних рассылок нет
 dispatchHandler=Абонент
 deregisterAlbum=Снять с учета альбом
 
+NotBlank.document.decimalNumber=Децимальный номер не должен быть пустым
+DecimalNumberNotDuplicate.document.decimalNumber=Децимальный номер уже существует
+
+
 
 
 
