Add i18n for Document validation messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -118,8 +118,25 @@ dispatchHandler=Dispatch handler
 deregisterAlbum=Deregister album
 
 NotBlank.document.decimalNumber=Decimal number must not be blank
+NotBlank.document.name=Name must not be blank
+NotNull.document.inventoryNumber=Inventory number must not be empty
+Min.document.inventoryNumber=Inventory number must be greater than 0
+NotNull.document.receiptDate=Issue date must not be empty
+NotNull.document.status=Status must not be empty
+NotNull.document.form=Form must not be empty
+Min.document.sheetsAmount=Sheets amount must be greater than 0
+Min.document.a4Amount=A4 amount must be greater than 0
+NotNull.document.department=Developer must not be empty
+NotNull.document.originalHolder=Original holder must not be empty
+
+
+
 DecimalNumberNotDuplicate.document.decimalNumber=Decimal number already exists
 
+addApplicabilityErrorMessage.decimalNumberMustNotBeEmpty=Decimal number must not be empty
+addApplicabilityErrorMessage.alreadyAdded=Applicability already added
+addApplicabilityErrorMessage.notFound=Document not found
+changeNoticeRemoveErrorMessage=Change notice can not exist without any documents!
 
 
 
