--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -118,7 +118,25 @@ dispatchHandler=Абонент
 deregisterAlbum=Снять с учета альбом
 
 NotBlank.document.decimalNumber=Децимальный номер не должен быть пустым
+NotBlank.document.name=Наименование не должно быть пустым
+NotNull.document.inventoryNumber=Инвентарный номер не должен быть пустым
+Min.document.inventoryNumber=Инвентарный номер должен быть больше 0
+NotNull.document.receiptDate=Дата выпуска не должна быть пустая
 DecimalNumberNotDuplicate.document.decimalNumber=Децимальный номер уже существует
+NotNull.document.status=Статус не должен быть пустым
+NotNull.document.form=Форма не должна быть пустая
+Min.document.sheetsAmount=Количество листов должно быть больше 0
+Min.document.a4Amount=Количество форматок А4 должно быть больше 0
+NotNull.document.department=Разработчик не должен быть пустым
+NotNull.document.originalHolder=Держатель подлинника не должен быть пустым
+
+addApplicabilityErrorMessage.decimalNumberMustNotBeEmpty=Децимальный номер не должен быть пустым
+addApplicabilityErrorMessage.alreadyAdded=Уже добавлено
+addApplicabilityErrorMessage.notFound=Документ не найден
+changeNoticeRemoveErrorMessage=Извещение не может существовать без документов
+
+
+
 
 
 
