Add i18n for Department validation messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -116,9 +116,12 @@ document.internaldispatches.section.internalDispatches=internal dispatches
 noInternalDispatches=No internal dispatches
 dispatchHandler=Dispatch handler
 deregisterAlbum=Deregister album
-
 NotBlank.document.decimalNumber=Decimal number must not be blank
 NotBlank.document.name=Name must not be blank
+NotBlank.department.name=Name must not be blank
+NotBlank.department.chiefName=Chief name must not be blank
+NotNull.department.isDeveloper="Is developer" mark must not be empty
+NotNull.department.canTakeAlbums="Use albums" mark must not be empty
 NotNull.document.inventoryNumber=Inventory number must not be empty
 Min.document.inventoryNumber=Inventory number must be greater than 0
 NotNull.document.receiptDate=Issue date must not be empty
@@ -126,17 +129,26 @@ NotNull.document.status=Status must not be empty
 NotNull.document.form=Form must not be empty
 Min.document.sheetsAmount=Sheets amount must be greater than 0
 Min.document.a4Amount=A4 amount must be greater than 0
+Min.department.workersAmount=Workers amount must be greater than 0
 NotNull.document.department=Developer must not be empty
 NotNull.document.originalHolder=Original holder must not be empty
-
-
-
 DecimalNumberNotDuplicate.document.decimalNumber=Decimal number already exists
-
+DepartmentNameNotDuplicate.department.name=Department already exists
 addApplicabilityErrorMessage.decimalNumberMustNotBeEmpty=Decimal number must not be empty
 addApplicabilityErrorMessage.alreadyAdded=Applicability already added
 addApplicabilityErrorMessage.notFound=Document not found
 changeNoticeRemoveErrorMessage=Change notice can not exist without any documents!
+departmentInfo=Department info
+toListOfDepartments=To List of Departments
+departmentDirectory=Department Directory
+description=Description
+saveDepartmentFormTitle=Save department
+updateDepartmentFormTitle=Update department
+departmentCard=Department Card
+isDeveloper=Is developer
+useAlbums=Use albums
+yes=Yes
+no=No
 
 
 
