--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -116,24 +116,42 @@ document.internaldispatches.section.internalDispatches=внутренние ра
 noInternalDispatches=Внутренних рассылок нет
 dispatchHandler=Абонент
 deregisterAlbum=Снять с учета альбом
-
 NotBlank.document.decimalNumber=Децимальный номер не должен быть пустым
 NotBlank.document.name=Наименование не должно быть пустым
+NotBlank.department.name=Наименование не должно быть пустым
+NotBlank.department.chiefName=Имя начальника не должно быть пустым
+NotNull.department.isDeveloper=Метка "Разработчик" не должна быть пустая
+NotNull.department.canTakeAlbums=Метка "Пользуется альбомами" не должна быть пустая
 NotNull.document.inventoryNumber=Инвентарный номер не должен быть пустым
 Min.document.inventoryNumber=Инвентарный номер должен быть больше 0
+Min.department.workersAmount=Количество работников должно быть больше 0
 NotNull.document.receiptDate=Дата выпуска не должна быть пустая
 DecimalNumberNotDuplicate.document.decimalNumber=Децимальный номер уже существует
+DepartmentNameNotDuplicate.department.name=Отдел уже существует
 NotNull.document.status=Статус не должен быть пустым
 NotNull.document.form=Форма не должна быть пустая
 Min.document.sheetsAmount=Количество листов должно быть больше 0
 Min.document.a4Amount=Количество форматок А4 должно быть больше 0
 NotNull.document.department=Разработчик не должен быть пустым
 NotNull.document.originalHolder=Держатель подлинника не должен быть пустым
-
 addApplicabilityErrorMessage.decimalNumberMustNotBeEmpty=Децимальный номер не должен быть пустым
 addApplicabilityErrorMessage.alreadyAdded=Уже добавлено
 addApplicabilityErrorMessage.notFound=Документ не найден
 changeNoticeRemoveErrorMessage=Извещение не может существовать без документов
+departmentInfo=Информация об отделе
+toListOfDepartments=К списку отделов
+departmentDirectory=Раздел отделов
+description=Описание
+saveDepartmentFormTitle=Создать отдел
+updateDepartmentFormTitle=Изменить отдел
+departmentCard=Карточка отдела
+isDeveloper=Разработчик
+useAlbums=Пользуется альбомами
+yes=Да
+no=Нет
+
+
+
 
 
 
