Add i18n for ChangeNotice directory

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -149,6 +149,45 @@ isDeveloper=Is developer
 useAlbums=Use albums
 yes=Yes
 no=No
+changeNoticeInfo=Change notice info
+toListOfChangeNotices=To List of Change notices
+changeNoticeDirectory=Change notice Directory
+documents=Documents
+showDocuments=Show documents
+saveChangeNoticeFormTitle=Save change notice
+updateChangeNoticeFormTitle=Update change notice
+changeNoticeCard=Change notice Card
+NotBlank.changeNotice.name=Name must not be blank
+NotNull.changeNotice.changeCode=Change code must not be empty
+NotNull.changeNotice.issueDate=Issue date must not be empty
+NotNull.changeNotice.department=Developer must not be empty
+Range.changeNotice.changeCode=Change code must be between 1 and 18
+ChangeNoticeNameNotDuplicate.changeNotice.name=Change notice already exists
+changeDocumentsList=Change documents list
+noDocuments=No documents
+changeNoticeDocumentsList.documents=documents
+addDocument=Add document
+changeNoticeDocumentsList.docRemoveErrorMessage=The change notice can not exist without any documents!
+addDocumentError.NotEmpty=Decimal number must not be empty
+addDocumentError.NotExist=Document does not exist
+changeNoticeDocumentsList.addDocumentError.AlreadyAdded=This change notice already has this document
+changeNoticeDocumentsList.addDocumentError.ChangeNumberNotEmpty=Change number must not be empty
+changeNoticeDocumentsList.addDocumentError.ChangeNumberMin=Change number must be greater than 0
+changeNoticeDocumentsList.addDocumentError.ChangeNumberAlreadyHas=Document already has this change number
+changeNoticeDocumentsList.addDocumentError.ChangeNumberInvalid=Invalid change number
+externalDispatchInfo=External dispatch info
+toListOfExternalDispatches=To List of External dispatches
+externalDispatchDirectory=External dispatch Directory
+externalDispatchDocumentsList.addDocumentError.AlreadyAdded=This external dispatch already has this document
+externalDispatchRemoveDocumentErrorMessage=External dispatch can not exist without any documents!
+saveExternalDispatchFormTitle=Save External Dispatch
+updateExternalDispatchFormTitle=Update External Dispatch
+externalDispatchCard=External dispatch card
+
+
+
+
+
 
 
 
