--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -149,6 +149,50 @@ isDeveloper=Разработчик
 useAlbums=Пользуется альбомами
 yes=Да
 no=Нет
+changeNoticeInfo=Информация об извещении
+toListOfChangeNotices=К списку извещений
+changeNoticeDirectory=Раздел извещений
+documents=Документы
+showDocuments=Показать документы
+saveChangeNoticeFormTitle=Создать извещение
+updateChangeNoticeFormTitle=Изменить извещение
+changeNoticeCard=Карточка извещения
+NotBlank.changeNotice.name=Наименование не должно быть пустым
+NotNull.changeNotice.changeCode=Код изменения не должен быть пустым
+NotNull.changeNotice.issueDate=Дата выпуска не должна быть пустая
+NotNull.changeNotice.department=Разработчик не должен быть пустым
+Range.changeNotice.changeCode=Код изменения должен быть между 1 и 18
+ChangeNoticeNameNotDuplicate.changeNotice.name=Извещение уже существует
+changeDocumentsList=Список документов извещения
+noDocuments=Документов нет
+changeNoticeDocumentsList.documents=документы
+addDocument=Добавить документ
+changeNoticeDocumentsList.docRemoveErrorMessage=Извещение не может существовать без документов!
+addDocumentError.NotEmpty=Децимальный номер не должен быть пустым
+addDocumentError.NotExist=Документ не найден
+changeNoticeDocumentsList.addDocumentError.AlreadyAdded=Это извещение уже имеет данный документ
+changeNoticeDocumentsList.addDocumentError.ChangeNumberNotEmpty=Номер изменения не должен быть пустым
+changeNoticeDocumentsList.addDocumentError.ChangeNumberMin=Номер изменения должен быть больше 0
+changeNoticeDocumentsList.addDocumentError.ChangeNumberAlreadyHas=Документ уже имеет такой номер изменения
+changeNoticeDocumentsList.addDocumentError.ChangeNumberInvalid=Неверный номер изменения
+externalDispatchInfo=Информация о внешней рассылке
+toListOfExternalDispatches=К списку внешних рассылок
+externalDispatchDirectory=Раздел внешних рассылок
+externalDispatchDocumentsList.addDocumentError.AlreadyAdded=Эта внешняя рассылка уже содержит данный документ
+externalDispatchRemoveDocumentErrorMessage=Внешняя рассылка не может существовать без документов!
+saveExternalDispatchFormTitle=Создать внешнюю рассылку
+updateExternalDispatchFormTitle=Изменить внешнюю рассылку
+externalDispatchCard=Карточка внешней рассылки
+
+
+
+
+
+
+
+
+
+
 
 
 
