Add i18n to internaldispatch directory, company directory, albums directory

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -61,7 +61,7 @@ addressee=Addressee
 dispatchType=Dispatch type
 album=Album
 scattered=Scattered
-albumDecimalNumber=Decimal number
+albumDecimalNumber=Album decimal number
 currentHandler=Current handler
 handlerName=Handler name
 handlerPhoneNumber=Handler phone number
@@ -183,6 +183,69 @@ externalDispatchRemoveDocumentErrorMessage=External dispatch can not exist witho
 saveExternalDispatchFormTitle=Save External Dispatch
 updateExternalDispatchFormTitle=Update External Dispatch
 externalDispatchCard=External dispatch card
+NotBlank.externalDispatch.waybill=Waybill must not be blank
+NotBlank.externalDispatch.letterOutgoingNumber=Letter outgoing number must not be blank
+NotNull.externalDispatch.company=Company must not be empty
+NotNull.externalDispatch.dispatchDate=Dispatch date must not be empty
+NotNull.externalDispatch.status=Status must not be empty
+internalDispatchInfo=Internal Dispatch Info
+toListOfInternalDispatches=To List of Internal dispatches
+internalDispatchDirectory=Internal Dispatch Directory
+internalDispatchDocumentsList.addDocumentError.AlreadyAdded=This internal dispatch already has this document
+internalDispatchErrorDeleteMessage=Internal dispatch can not exist without any documents!
+saveInternalDispatchFormTitle=Save Internal Dispatch
+updateInternalDispatchFormTitle=Update Internal Dispatch
+internalDispatchCard=Internal dispatch card
+isAlbum=Is Album
+internalHandlerName=Internal handler name
+internalHandlerPhoneNumber=Internal handler phone number
+NotNull.internalDispatch.isAlbum="Is album" mark must not be empty
+NotBlank.internalDispatch.waybill=Waybill must not be blank
+NotNull.internalDispatch.dispatchDate=Dispatch date must not be empty
+NotNull.internalDispatch.status=Status must not be empty
+NotNull.internalDispatch.dispatchHandler=Dispatch handler must not be empty
+NotBlank.internalDispatch.internalHandlerName=Handler name must not be blank
+NotBlank.internalDispatch.internalHandlerPhoneNumber=Handler phone number must not be blank
+NotNull.internalDispatch.receivedInternalDate=Received date must not be empty
+AlbumNameValid.internalDispatch.albumName=Document does not exist
+companyInfo=Company info
+toListOfCompanies=To List of Companies
+companyDirectory=Company Directory
+saveCompanyFormTitle=Save company
+updateCompanyFormTitle=Update company
+companyCard=Company Card
+zipCode=Zipcode
+city=City
+street=Street
+building=Building
+NotBlank.company.name=Name must not be blank
+NotBlank.company.address.zipcode=Zipcode must not be blank
+NotBlank.company.address.city=City must not be blank
+NotBlank.company.address.street=Street must not be blank
+NotBlank.company.address.building=Building must not be blank
+albumInfo=Album info
+toListOfAlbums=To List of Albums
+albumDirectory=Album Directory
+albumDocuments=Album documents:
+albumHandlerInfo=Album handler info
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
