--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -61,7 +61,7 @@ addressee=Адресат
 dispatchType=Тип рассылки
 album=Альбом
 scattered=Россыпь
-albumDecimalNumber=Децимальный номер
+albumDecimalNumber=Децимальный номер альбома
 currentHandler=Текущий держатель
 handlerName=ФИО держателя
 handlerPhoneNumber=Телефон держателя
@@ -183,6 +183,67 @@ externalDispatchRemoveDocumentErrorMessage=Внешняя рассылка не 
 saveExternalDispatchFormTitle=Создать внешнюю рассылку
 updateExternalDispatchFormTitle=Изменить внешнюю рассылку
 externalDispatchCard=Карточка внешней рассылки
+NotBlank.externalDispatch.waybill=Номер накладной не должен быть пустым
+NotBlank.externalDispatch.letterOutgoingNumber=Исходящий номер письма не должен быть пустым
+NotNull.externalDispatch.company=Адресат не должен быть пустым
+NotNull.externalDispatch.dispatchDate=Дата отправки не должна быть пустой
+NotNull.externalDispatch.status=Статус не должен быть пустым
+internalDispatchInfo=Информация о внутренней рассылке
+toListOfInternalDispatches=К списку внутренних рассылок
+internalDispatchDirectory=Раздел внутренних рассылок
+internalDispatchDocumentsList.addDocumentError.AlreadyAdded=Эта внутренняя рассылка уже содержит данный документ
+internalDispatchErrorDeleteMessage=Внутренняя рассылка не может существовать без документов!
+saveInternalDispatchFormTitle=Создать внутреннюю рассылку
+updateInternalDispatchFormTitle=Изменить внутреннюю рассылку
+internalDispatchCard=Карточка внутренней рассылки
+isAlbum=Является альбомом
+internalHandlerName=Имя абонента
+internalHandlerPhoneNumber=Телефонный номер абонента
+NotNull.internalDispatch.isAlbum=Пометка "Является альбомом" не должна быть пустая
+NotBlank.internalDispatch.waybill=Номер накладной не должен быть пустым
+NotNull.internalDispatch.dispatchDate=Дата отправки не должна быть пустой
+NotNull.internalDispatch.status=Статус не должен быть пустым
+NotNull.internalDispatch.dispatchHandler=Адресат не должен быть пустым
+NotBlank.internalDispatch.internalHandlerName=Имя адресата не должно быть пустым
+NotBlank.internalDispatch.internalHandlerPhoneNumber=Телефонный номер адресата не должен быть пустым
+NotNull.internalDispatch.receivedInternalDate=Дата получения не должна быть пустой
+AlbumNameValid.internalDispatch.albumName=Документ не существует
+companyInfo=Информация о предприятии
+toListOfCompanies=К списку предприятий
+companyDirectory=Раздел предприятий
+saveCompanyFormTitle=Создать предприятие
+updateCompanyFormTitle=Изменить предприятие
+companyCard=Карточка предприятия
+zipCode=Почтовый индекс
+city=Город
+street=Улица
+building=Дом
+NotBlank.company.name=Наименование не должно быть пустым
+NotBlank.company.address.zipcode=Почтовый индекс не должен быть пустым
+NotBlank.company.address.city=Город не должен быть пустым
+NotBlank.company.address.street=Улица не должна быть пустой
+NotBlank.company.address.building=Дом не должен быть пустым
+albumInfo=Информация об альбоме
+toListOfAlbums=К списку альбомов
+albumDirectory=Раздел альбомов
+albumDocuments=Документы альбома:
+albumHandlerInfo=Информация о держателе альбома
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
