--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -7,7 +7,7 @@ index.section.externaldispatches=Внешние рассылки
 index.section.companies=Предприятия
 index.section.internaldispatches=Внутрение рассылки
 index.section.copiesArchive=Архив копий
-backToHomePage=На домашнюю страницу
+backToHomePage=Home
 documents.headline=Список документов
 departments.headline=Список отделов
 changenotices.headline=Список извещений об изменении
