Add User creation functional to the project

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -228,6 +228,30 @@ toListOfAlbums=To List of Albums
 albumDirectory=Album Directory
 albumDocuments=Album documents:
 albumHandlerInfo=Album handler info
+email=Email
+listOfUsers=List of Users
+addUser=Add User
+creationDate=Creation date
+role=Role
+enabled=Enabled
+disabled=Disabled
+saveUserFormTitle=Save User
+updateUserFormTitle=Update User
+userDirectory=User Directory
+userCard=User Card
+password=Password
+passwordConfirmation=Password confirmation
+EmailNotDuplicate.user.email=Email already registered
+NotBlank.user.password=Password is required
+NotBlank.user.passwordConfirmation=Password confirmation is required
+NotBlank.user.email=Email is required
+NotNull.user.role=Role must not be empty
+PasswordMatches.user.passwordConfirmation=Passwords must match
+PasswordMatches.user.password=Passwords must match
+userInfo=User Information
+users=Users
+logout=Logout
+
 
 
 
