--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -7,7 +7,7 @@ index.section.externaldispatches=Внешние рассылки
 index.section.companies=Предприятия
 index.section.internaldispatches=Внутрение рассылки
 index.section.copiesArchive=Архив копий
-backToHomePage=Home
+backToHomePage=На главную
 documents.headline=Список документов
 departments.headline=Список отделов
 changenotices.headline=Список извещений об изменении
@@ -228,6 +228,38 @@ toListOfAlbums=К списку альбомов
 albumDirectory=Раздел альбомов
 albumDocuments=Документы альбома:
 albumHandlerInfo=Информация о держателе альбома
+email=Email
+listOfUsers=Список пользователей
+addUser=Добавить пользователя
+creationDate=Дата создания
+role=Роль
+enabled=Ок
+disabled=Заблокирован
+saveUserFormTitle=Создать пользователя
+updateUserFormTitle=Изменить пользователя
+userDirectory=Раздел пользователей
+userCard=Карточка пользователя
+password=Пароль
+passwordConfirmation=Подтверждение пароля
+EmailNotDuplicate.user.email=Email уже зарегистрирован
+NotBlank.user.password=Пароль требуется
+NotBlank.user.passwordConfirmation=Подтверждение пароля требуется
+NotBlank.user.email=Email требуется
+NotNull.user.role=Роль не должна быть пустой
+PasswordMatches.user.passwordConfirmation=Пароли должны совпадать
+PasswordMatches.user.password=Пароли должны совпадать
+userInfo=Инфо о пользователе
+users=Пользователи
+logout=Выйти
+
+
+
+
+
+
+
+
+
 
 
 
