Add ban/unban functional to user-info.html and backend accordingly

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -251,6 +251,8 @@ PasswordMatches.user.password=Passwords must match
 userInfo=User Information
 users=Users
 logout=Logout
+ban=Ban
+unBan=Unban
 
 
 
