--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -251,6 +251,9 @@ PasswordMatches.user.password=Пароли должны совпадать
 userInfo=Инфо о пользователе
 users=Пользователи
 logout=Выйти
+ban=Забанить
+unBan=Разбанить
+
 
 
 
