Add i18n to loginPage.html

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -253,7 +253,13 @@ users=Users
 logout=Logout
 ban=Ban
 unBan=Unban
-
+loginPage=Login page
+rememberMe=Remember me?
+signIn=Sign In
+signUp=Sign Up
+resetPassword=Reset password
+loggedOut=You have been logged out.
+invalidNameAndPass=Invalid username and password.
 
 
 
