--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -253,6 +253,18 @@ users=Пользователи
 logout=Выйти
 ban=Забанить
 unBan=Разбанить
+loginPage=Страница авторизации
+rememberMe=Запомнить?
+signIn=Войти
+signUp=Зарегистрироваться
+resetPassword=Сбросить пароль
+loggedOut=Вы вышли из учетной записи
+invalidNameAndPass=Неверные email и пароль
+
+
+
+
+
 
 
 
