Refactor update User functional --> do update without changing password

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -260,6 +260,8 @@ signUp=Sign Up
 resetPassword=Reset password
 loggedOut=You have been logged out.
 invalidNameAndPass=Invalid username and password.
+department=Department
+userName=User name
 
 
 
