--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -260,6 +260,9 @@ signUp=Зарегистрироваться
 resetPassword=Сбросить пароль
 loggedOut=Вы вышли из учетной записи
 invalidNameAndPass=Неверные email и пароль
+department=Отдел
+userName=Имя пользователя
+
 
 
 
