Add JS password validation to change password htmls

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -262,6 +262,10 @@ loggedOut=You have been logged out.
 invalidNameAndPass=Invalid username and password.
 department=Department
 userName=User name
+notRegistered=User with such email not registered
+emailSent=You should receive an Password Reset Email shortly
+changePassword=Change password
+
 
 
 
