--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -262,6 +262,12 @@ loggedOut=Вы вышли из учетной записи
 invalidNameAndPass=Неверные email и пароль
 department=Отдел
 userName=Имя пользователя
+notRegistered=Пользователь с таким email не зарегистрирован
+emailSent=Вскоре вы должны получить письмо для сброса пароля
+changePassword=Изменить пароль
+
+
+
 
 
 
