Add JS password validation to admin change password for user html

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -265,6 +265,7 @@ userName=User name
 notRegistered=User with such email not registered
 emailSent=You should receive an Password Reset Email shortly
 changePassword=Change password
+notMatches=Passwords do not match
 
 
 
