--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -265,6 +265,8 @@ userName=Имя пользователя
 notRegistered=Пользователь с таким email не зарегистрирован
 emailSent=Вскоре вы должны получить письмо для сброса пароля
 changePassword=Изменить пароль
+notMatches=Пароли не совпадают
+
 
 
 
