Add functional for instance ban User

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -266,6 +266,9 @@ notRegistered=Пользователь с таким email не зарегист
 emailSent=Вскоре вы должны получить письмо для сброса пароля
 changePassword=Изменить пароль
 notMatches=Пароли не совпадают
+banned=Забанен
+nonBanned=Ok
+
 
 
 
