--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -266,7 +266,8 @@ notRegistered=User with such email not registered
 emailSent=You should receive an Password Reset Email shortly
 changePassword=Change password
 notMatches=Passwords do not match
-
+banned=Banned
+nonBanned=Ok
 
 
 
