Add functional to show active users

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -268,6 +268,8 @@ changePassword=Change password
 notMatches=Passwords do not match
 banned=Banned
 nonBanned=Ok
+showActiveUsers=Show active
+showAll=Show all
 
 
 
