--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -268,6 +268,8 @@ changePassword=Изменить пароль
 notMatches=Пароли не совпадают
 banned=Забанен
 nonBanned=Ok
+showActiveUsers=Показать активных
+showAll=Показать всех
 
 
 
