Add cosmetic fixes to user-list.html

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -267,7 +267,7 @@ emailSent=You should receive an Password Reset Email shortly
 changePassword=Change password
 notMatches=Passwords do not match
 banned=Banned
-nonBanned=Ok
+nonBanned=OK
 showActiveUsers=Show active
 showAll=Show all
 
