--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -266,8 +266,8 @@ notRegistered=Пользователь с таким email не зарегист
 emailSent=Вскоре вы должны получить письмо для сброса пароля
 changePassword=Изменить пароль
 notMatches=Пароли не совпадают
-banned=Забанен
-nonBanned=Ok
+banned=Заблокирован
+nonBanned=OК
 showActiveUsers=Показать активных
 showAll=Показать всех
 
