Add pdf file adding support for Document directory

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -270,6 +270,8 @@ banned=Banned
 nonBanned=OK
 showActiveUsers=Show active
 showAll=Show all
+electronicImage=Electronic image
+showElectronicImage=Show electronic image
 
 
 
