--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -270,6 +270,9 @@ banned=Заблокирован
 nonBanned=OК
 showActiveUsers=Показать активных
 showAll=Показать всех
+electronicImage=Электронный образ
+showElectronicImage=Показать электронный образ
+
 
 
 
