Refactor htmls (cosmetic fixes)

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -80,8 +80,8 @@ update=Update
 delete=Delete
 showChanges=Show changes
 showApplicability=Show applicability
-showExternals=Show external dispatches
-showInternals=Show internal dispatches
+showExternals=Show external subscribers
+showInternals=Show internal subscribers
 documentInfo=Document info
 format=Format
 sheetsAmount=Sheets amount
@@ -104,16 +104,16 @@ addApplicability=Add applicability
 document.applicabilities.section.applicability=applicability
 noApplicability=No applicability
 externalDispatchesList=External dispatches list
-document.externaldispatches.section.externalDispatches=external dispatches
-noExternalDispatches=No external dispatches
+document.externaldispatches.section.externalDispatches=external subscribers
+noExternalDispatches=No external subscribers
 active=Active
 active.true=Yes
 active.false=No
 deregister=Deregister
 deregisterWithIncomings=Dereg. with inc.
 internalDispatchesList=Internal dispatches list
-document.internaldispatches.section.internalDispatches=internal dispatches
-noInternalDispatches=No internal dispatches
+document.internaldispatches.section.internalDispatches=internal subscribers
+noInternalDispatches=No internal subscribers
 dispatchHandler=Dispatch handler
 deregisterAlbum=Deregister album
 NotBlank.document.decimalNumber=Decimal number must not be blank
@@ -270,11 +270,22 @@ banned=Banned
 nonBanned=OK
 showActiveUsers=Show active
 showAll=Show all
-electronicImage=Electronic image
+electronicImage=electronic image
 showElectronicImage=Show electronic image
-
-
-
+noElectronicImages=No electronic image
+showPreviousVersions=Show previous versions
+changeNumberTruncate=Change num.
+addImage=Add image
+previousVersions=previous versions
+previousVersionsUpper=Previous versions
+noPreviousVersions=No previous versions
+previousVersions.electronicImage=Electronic image
+chooseFile=Choose file
+change=ch.
+externalSubscribers=External subscribers
+internalSubscribers=Internal subscribers
+separately=Separately
+withIncomings=With inc.
 
 
 
