--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -80,8 +80,8 @@ update=Изменить
 delete=Удалить
 showChanges=Показать изменения
 showApplicability=Показать применяемость
-showExternals=Показать внешние рассылки
-showInternals=Показать внутренние рассылки
+showExternals=Показать внешних абонентов
+showInternals=Показать внутренних абонентов
 documentInfo=Информация о документе
 format=Формат
 sheetsAmount=Количество листов
@@ -95,7 +95,7 @@ nothingSelected=Не выбрано
 documentChangeNotices=Изменения документа
 backToDocumentInfo=Назад к инфо о документе
 changeNumber=Номер изменения
-remove=Убрать
+remove=Удалить
 noChanges=Изменений нет
 document.changenotices.section.changenotices=изменения
 documentApplicabilityList=Список применяемостей документа
@@ -104,16 +104,16 @@ addApplicability=Добавить прим-ть
 document.applicabilities.section.applicability=применяемость
 noApplicability=Применяемости нет
 externalDispatchesList=Список внешних рассылок
-document.externaldispatches.section.externalDispatches=внешние рассылки
-noExternalDispatches=Внешних рвссылок нет
+document.externaldispatches.section.externalDispatches=внешние абоненты
+noExternalDispatches=Внешних абонентов нет
 active=Активна
 active.true=Да
 active.false=Нет
 deregister=Снять с учета
 deregisterWithIncomings=Снять с вх.
 internalDispatchesList=Список внутренних рассылок
-document.internaldispatches.section.internalDispatches=внутренние рассылки
-noInternalDispatches=Внутренних рассылок нет
+document.internaldispatches.section.internalDispatches=внутренние абоненты
+noInternalDispatches=Внутренних абонентов нет
 dispatchHandler=Абонент
 deregisterAlbum=Снять с учета альбом
 NotBlank.document.decimalNumber=Децимальный номер не должен быть пустым
@@ -270,8 +270,30 @@ banned=Заблокирован
 nonBanned=OК
 showActiveUsers=Показать активных
 showAll=Показать всех
-electronicImage=Электронный образ
+electronicImage=электронный образ
 showElectronicImage=Показать электронный образ
+noElectronicImages=Нет электронного образа
+showPreviousVersions=Показать предыдущие версии
+changeNumberTruncate=Номер изм.
+addImage=Добавить образ
+previousVersions=предыдущие версии
+previousVersionsUpper=Предыдущие версии
+noPreviousVersions=Нет предыдущих версий
+previousVersions.electronicImage=Электронный образ
+chooseFile=Выберите файл
+change=изм.
+externalSubscribers=Внешние абоненты
+internalSubscribers=Внутренние абоненты
+separately=Отдельно
+withIncomings=С входящ.
+
+
+
+
+
+
+
+
 
 
 
