Fix problem with conflict between bootstrap.js and jQuery.js -> remove button-toggles from radio-buttons fields

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -286,6 +286,7 @@ externalSubscribers=External subscribers
 internalSubscribers=Internal subscribers
 separately=Separately
 withIncomings=With inc.
+albumWithIncomings=Album with inc.
 
 
 
