--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -286,6 +286,7 @@ externalSubscribers=Внешние абоненты
 internalSubscribers=Внутренние абоненты
 separately=Отдельно
 withIncomings=С входящ.
+albumWithIncomings=Альбом с вх.
 
 
 
